# pptx-speaker-cards

./: .gitignore  CHANGELOG.md  LICENSE  README.md  generate_speaker_cards.py  pyproject.toml  requirements.txt
pptx_speaker_cards/: __init__.py  __main__.py  cli.py
