[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pptx-speaker-cards"
version = "1.0.1"
description = "Generate printable speaker cards from PowerPoint presentation notes"
readme = "README.md"
authors = [{name = "Mikael Kågebäck", email = "mikael@kageback.se"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["powerpoint", "pptx", "speaker-notes", "pdf", "presentation", "cli"]
dependencies = [
    "python-pptx>=0.6.23",
    "reportlab>=4.1.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/kageback/pptx-speaker-cards"
Repository = "https://github.com/kageback/pptx-speaker-cards"
Issues = "https://github.com/kageback/pptx-speaker-cards/issues"

[project.scripts]
pptx-speaker-cards = "pptx_speaker_cards.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pptx_speaker_cards*"]
